Доработка верстки страницы

--- a/public/index.html
+++ b/public/index.html
@@ -8,46 +8,84 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poiret+One&family=Russo+One&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../src/index.css">
+    <script type="text/javascript" src="../src/scripts/script_search_artist.js" async></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <title>Music page</title>
 </head>
 
 <body>
-    <!--ШАПКА САЙТА-->
-    <div class="head">
+    <div class="flex-container-head">
         <div class="logo">
             <p class="logo_text">MusicFM</p>
         </div>
     </div>
 
-    <!--ОБЩАЯ ИНФОРМАЦИЯ-->
     <div class="site_body">
         <div class="container">
             <div class="actor_body">
                 <p class="body_text">Actors List</p>
-                <div class="search">
-                    <form>
-                        <input type="text" placeholder="Search here...">
-                        <button type="submit"></button>
+                <div class="search_area">
+                    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+                        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+                        crossorigin="anonymous">
+                    <form action="">
+                        <input type="search">
+                        <i class="fa fa-search"></i>
                     </form>
+                </div>
+                <div class="list_area">
+                    <ol class="rectangle">
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                    </ol>
                 </div>
             </div>
             <div class="music_body">
                 <p class="body_text">Music List</p>
-                <div class="search">
-                    <form>
-                        <input type="text" placeholder="Search here...">
-                        <button type="submit"></button>
+                <div class="search_area">
+                    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+                        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+                        crossorigin="anonymous">
+                    <form action="">
+                        <input type="search">
+                        <i class="fa fa-search"></i>
                     </form>
+                </div>
+                <div class="list_area">
+                    <ol class="rectangle">
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                        <li><a href="#">Элемент списка</a></li>
+                    </ol>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="footer">
-        <footer class="info">
-            <p class="info_text">CBS Interactive © 2022 Last.fm Ltd. All rights reserved Terms of Use Privacy Policy Legal Policies Cookies Policy Do Not Sell My Personal Information Jobs at ViacomCBS Last.fm Music</p>
-        </div>
-    </footer>
+    <div class="footer">
+        <p class="info_text">CBS Interactive © 2022 Last.fm Ltd. All rights reserved Terms of Use Privacy Policy
+            Legal Policies Cookies Policy Do Not Sell My Personal Information Jobs at ViacomCBS Last.fm Music</p>
+    </div>
 </body>
 
 </html>
