Create project react

--- a/public/index.html
+++ b/public/index.html
@@ -30,48 +30,7 @@
 </head>
 
 <body>
-    <div class="flex-container-head">
-        <div class="logo">
-            <p class="logo_text">MusicFM</p>
-        </div>
-    </div>
-
-    <div class="site_body">
-        <div class="container">
-            <div class="actor_body">
-                <p class="body_text">Actors List</p>
-                <div class="search_area">
-                    <form class="form" action="">
-                        <input id="actor_text" class="input" type="search">
-                        <i id="search_artist_button" class="fa fa-search"></i>
-                    </form>
-                </div>
-                <div id="artist_list_div" class="list_area">
-                    <ol id="artist_list" class="rectangle">  
-                    </ol>
-                </div>
-            </div>
-            <div class="music_body">
-                <p class="body_text">Music List</p>
-                <div class="search_area">
-                    <form class="form" action="">
-                        <input id="music_text" class="input" type="search">
-                        <i id="search_music_button" class="fa fa-search"></i>
-                    </form>
-                </div>
-                <div id="music_list_div" class="list_area">
-                    <ol id="music_list" class="rectangle">
-                    </ol>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="footer">
-        <p class="info_text">CBS Interactive © 2022 Last.fm Ltd. All rights reserved Terms of Use Privacy Policy
-            Legal Policies Cookies Policy Do Not Sell My Personal Information Jobs at ViacomCBS Last.fm Music</p>
-    </div>
+    <div id="root"></div>
 </body>
-<script type="module" src="scripts/search_module.js"></script>
 
 </html>
