--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
     <div class="site_body">
         <div class="container">
-            <div class="actor_body">
+            <div id="actor_body" class="actor_music_body">
                 <p class="body_text">Actors List</p>
                 <div class="search_area">
                     <form class="form" action="">
@@ -51,7 +51,7 @@
                     </ol>
                 </div>
             </div>
-            <div class="music_body">
+            <div id="music_body" class="actor_music_body">
                 <p class="body_text">Music List</p>
                 <div class="search_area">
                     <form class="form" action="">
